fixed responsiveness, flipping carousel from horizontal to vertical on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
---varTranslate: 680px;
+--varTranslate: 280px;
+--varPerspective: 1000px;
 }
 
 main {
@@ -20,14 +21,6 @@ main {
 }
 
 #carousel {
-  /* position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%); */
-  /* border: 3px solid green;
-  margin-left: auto;
-  margin-right: auto;
-  display: table; */
   display: table-cell;
   vertical-align: middle;
 
@@ -42,8 +35,8 @@ main {
 .gallery {
   border: 3px solid green;
   margin: auto;
-  width: 300px;
-  height: 200px;
+  width: 200px;
+  height: 125px;
   transform-style:preserve-3d;
   animation: rotate 25s linear infinite;
 }
@@ -61,10 +54,10 @@ main {
 }
 
 @keyframes rotate{
-  from{transform:perspective(1200px) rotateY(0deg);
+  from{transform:perspective(var(--varPerspective)) rotateX(360deg);
   }
 
-  to{transform: perspective(1200px) rotateY(360deg);
+  to{transform: perspective(var(--varPerspective)) rotateX(0deg);
   }
 }
 
@@ -78,76 +71,74 @@ main {
 }
 
 #pic1 {
-  transform:rotateY(calc(1 * 77.14285714285714deg))
+  transform:rotateX(calc(1 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic2 {
-  transform:rotateY(calc(2 * 77.14285714285714deg))
+  transform:rotateX(calc(2 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic3 {
-  transform:rotateY(calc(3 * 77.14285714285714deg))
+  transform:rotateX(calc(3 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic4 {
-  transform:rotateY(calc(4 * 77.14285714285714deg))
+  transform:rotateX(calc(4 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic5 {
-  transform:rotateY(calc(5 * 77.14285714285714deg))
+  transform:rotateX(calc(5 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic6 {
-  transform:rotateY(calc(6 * 77.14285714285714deg))
+  transform:rotateX(calc(6 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic7 {
-  transform:rotateY(calc(7 * 77.14285714285714deg))
+  transform:rotateX(calc(7 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic8 {
-  transform:rotateY(calc(8 * 77.14285714285714deg))
+  transform:rotateX(calc(8 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic9 {
-  transform:rotateY(calc(9 * 77.14285714285714deg))
+  transform:rotateX(calc(9 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic10 {
-  transform:rotateY(calc(10 * 77.14285714285714deg))
+  transform:rotateX(calc(10 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic11 {
-  transform:rotateY(calc(11 * 77.14285714285714deg))
+  transform:rotateX(calc(11 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic12 {
-  transform:rotateY(calc(12 * 77.14285714285714deg))
+  transform:rotateX(calc(12 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic13 {
-  transform:rotateY(calc(13 * 77.14285714285714deg))
+  transform:rotateX(calc(13 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
 
 #pic14 {
-  transform:rotateY(calc(14 * 77.14285714285714deg))
+  transform:rotateX(calc(14 * 77.14285714285714deg))
   translateZ(var(--varTranslate));
 }
-
-
 
 .gallery span img{
   position: absolute;
@@ -156,27 +147,156 @@ main {
   object-fit: cover;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 621px) {
   :root {
-    --varTranslate: 380px;
+    --varTranslate: 400px;
   }
   .gallery {
-    width: 160px;
-    height: 100px;
+    width: 288px;
+    height: 180px;
+    padding-top: 0;
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 821px) {
   :root {
-    --varTranslate: 380px;
+    --varTranslate: 350px;
   }
   .gallery {
     width: 160px;
     height: 100px;
     padding-top: 0;
-
   }
-  #carousel {
-    /* transform: rotate(-90deg); */
+  #pic1 {
+    transform:rotateY(calc(1 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic2 {
+    transform:rotateY(calc(2 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic3 {
+    transform:rotateY(calc(3 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic4 {
+    transform:rotateY(calc(4 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic5 {
+    transform:rotateY(calc(5 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic6 {
+    transform:rotateY(calc(6 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic7 {
+    transform:rotateY(calc(7 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic8 {
+    transform:rotateY(calc(8 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic9 {
+    transform:rotateY(calc(9 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic10 {
+    transform:rotateY(calc(10 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic11 {
+    transform:rotateY(calc(11 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic12 {
+    transform:rotateY(calc(12 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic13 {
+    transform:rotateY(calc(13 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+  
+  #pic14 {
+    transform:rotateY(calc(14 * 77.14285714285714deg))
+    translateZ(var(--varTranslate));
+  }
+
+  @keyframes rotate{
+    from{transform:perspective(var(--varPerspective)) rotateY(0deg);
+    }
+  
+    to{transform: perspective(var(--varPerspective)) rotateY(360deg);
+    }
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  :root {
+    --varPerspective: 3000px;
+    --varTranslate: 500px
+  }
+
+  .gallery {
+    width: 228px;
+    height: 143px;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  :root {
+    --varPerspective: 2400px;
+    --varTranslate: 620px
+  }
+
+  .gallery {
+    width: 280px;
+    height: 175px;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  :root {
+    --varPerspective: 2000px
+  }
+}
+@media only screen and (min-width: 1600px) {
+  :root {
+    --varPerspective: 1300px
+  }
+}
+
+@media only screen and (min-width: 1700px) {
+  :root {
+    --varPerspective: 1200px
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  :root {
+    --varPerspective: 1100px
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  :root {
+    --varPerspective: 1000px
   }
 }
